# bor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  bor.conf.example  pyproject.toml
.github/workflows/: build.yml  tests.yml
agents/: guidelines.md  implementation.md  instructions.md  progress.md
bor/: __init__.py  app.py  config.py  mu.py
bor/tabs/: __init__.py  attachments.py  base.py  compose.py  message.py  message_index.py  sync.py
documentation/: architecture.md  configuration.md  keyboard_shortcuts.md
tests/: __init__.py  test_app_integration.py  test_compose.py  test_config.py  test_mu.py
